// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`button component 1`] = `
<button
  className="Primary"
  type="button"
>
  Content
</button>
`;

exports[`button component 2`] = `
<button
  className="Primary Active"
  type="button"
>
  Content
</button>
`;

exports[`button component 3`] = `
<button
  className="Primary Shadow"
  type="button"
>
  Content
</button>
`;

exports[`button component 4`] = `
<button
  className="Primary Large"
  type="button"
>
  Content
</button>
`;

exports[`button component 5`] = `
<button
  className="Primary Transparent"
  type="button"
>
  Content
</button>
`;

exports[`button component 6`] = `
<button
  className="Primary Chevron"
  type="button"
>
  Content
</button>
`;

exports[`button component 7`] = `
<button
  className="Close Subtile"
  type="button"
>
  Content
</button>
`;

exports[`button component 8`] = `
<button
  className="Subtile"
  type="button"
>
  <svg
    fill="none"
    height={24}
    viewBox="0 0 24 24"
    width={24}
  >
    <path
      d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z"
      fill="#245EAC"
    />
    <path
      d="M0 0h24v24H0z"
      fill="none"
    />
  </svg>
</button>
`;

exports[`button component 9`] = `
<button
  className="Subtile"
  type="button"
>
  <svg
    fill="none"
    height={24}
    viewBox="0 0 24 24"
    width={24}
  >
    <path
      d="M0 0h24v24H0z"
      fill="none"
    />
    <path
      d="M12 8c-2.21 0-4 1.79-4 4s1.79 4 4 4 4-1.79 4-4-1.79-4-4-4zm8.94 3c-.46-4.17-3.77-7.48-7.94-7.94V1h-2v2.06C6.83 3.52 3.52 6.83 3.06 11H1v2h2.06c.46 4.17 3.77 7.48 7.94 7.94V23h2v-2.06c4.17-.46 7.48-3.77 7.94-7.94H23v-2h-2.06zM12 19c-3.87 0-7-3.13-7-7s3.13-7 7-7 7 3.13 7 7-3.13 7-7 7z"
      fill="#245EAC"
    />
  </svg>
</button>
`;

exports[`button component 10`] = `
<button
  className="Subtile"
  onClick={[Function]}
  title={null}
  type="button"
>
  <svg
    fill="none"
    height={24}
    viewBox="0 0 24 24"
    width={24}
  >
    <path
      d="M19 13H5v-2h14v2z"
      fill="#245EAC"
    />
    <path
      d="M0 0h24v24H0z"
      fill="none"
    />
  </svg>
</button>
`;

exports[`button component 11`] = `
<button
  className="Primary"
  type="button"
>
  Content
</button>
`;

exports[`button component 12`] = `
<button
  className="Secondary"
  type="button"
>
  Content
</button>
`;

exports[`button component 13`] = `
<button
  className="Tertiary"
  type="button"
>
  Content
</button>
`;

exports[`button component 14`] = `
<button
  className="Incognito"
  type="button"
>
  Content
</button>
`;

exports[`button component 15`] = `
<button
  className="Subtile"
  type="button"
>
  Content
</button>
`;
